force-app/main/default/objects/Account/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <description>Test field used for CI/CD</description>
    <label>Test2 Glenn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>