force-app/main/default/objects/Account/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <description>Test field used for CI/CD</description>
    <label>Test Glenn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>